force-app/main/default/objects/Programs__c/Programs__c.object-meta.xml
<CustomObject>
    <label>Programs</label>
    <nameField>
        <displayFormat>PG{0000}</displayFormat>
        <label>Program Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>