force-app/main/default/objects/Programs__c/fields/CPT_HCPCS_Code__c.field-meta.xml
<CustomField>
    <fullName>CPT_HCPCS_Code__c</fullName>
    <label>CPT/HCPCS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>