force-app/main/default/objects/Programs__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>